--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -3,5 +3,8 @@
 {{outlet}}
 
 {{! The following component displays Ember's default welcome message. }}
-<WelcomePage />
+{{!-- <WelcomePage /> --}}
+<EmberAndroidToast />
+<EmberAndroidCamera />
+
 {{! Feel free to remove this! }}
